# MarkerPositioning

./: .gitignore  CMakeLists.txt  MarkerPositioning.cpp  MarkerPositioning.h  README.md  Settings.json  Settings_MUM.json  Settings_template.json  build.sh  config.cmake
MainThreadsManager/: CMakeLists.txt  MainThreadsManager.cpp  MainThreadsManager.h
MainThreadsManager/DetectionThread/: CMakeLists.txt  DetectionThread.cpp  DetectionThread.h  IDetection.h  Pose.h
MainThreadsManager/DetectionThread/AprilTagDetection/: AprilTagDetection.cpp  AprilTagDetection.h  AprilTagWithPose.h  CMakeLists.txt
MainThreadsManager/DetectionThread/ArUcoDetection/: ArUcoDetection.cpp  ArUcoDetection.h  CMakeLists.txt
MainThreadsManager/ImageReceiverThread/: CMakeLists.txt  FrameData.h  IVideoStream.h  ImageReceiverThread.cpp  ImageReceiverThread.h
MainThreadsManager/ImageReceiverThread/LUCIDStream/: CMakeLists.txt  LUCIDStream.cpp  LUCIDStream.h
MainThreadsManager/ImageReceiverThread/RTPStream/: CMakeLists.txt  RTPStream.cpp  RTPStream.h
MainThreadsManager/ImageReceiverThread/RTSPStream/: CMakeLists.txt  RTSPStream.cpp  RTSPStream.h
MainThreadsManager/UDPSenderThread/: CMakeLists.txt  PosePacket.h  UDPSenderThread.cpp  UDPSenderThread.h
SettingsReader/: CMakeLists.txt  SettingsReader.cpp  SettingsReader.h
